--- a/drools-container/drools-seam/pom.xml
+++ b/drools-container/drools-seam/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.drools</groupId>
     <artifactId>drools-container</artifactId>
-    <version>5.3.0.BRMS.ER1</version>
+    <version>5.3.0.BRMS-ER2</version>
   </parent>
 
   <artifactId>drools-seam</artifactId>
