--- a/droolsjbpm-integration-examples/pom.xml
+++ b/droolsjbpm-integration-examples/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.drools</groupId>
     <artifactId>droolsjbpm-integration</artifactId>
-    <version>5.3.0.BRMS.ER1</version>
+    <version>5.3.0.BRMS-ER2</version>
   </parent>
 
   <artifactId>droolsjbpm-integration-examples</artifactId>
