--- a/drools-benchmark/pom.xml
+++ b/drools-benchmark/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>droolsjbpm-integration</artifactId>
     <groupId>org.drools</groupId>
-    <version>5.3.0.BRMS-ER9</version>
+    <version>5.3.0.BRMS</version>
   </parent>
 
   <artifactId>drools-benchmark</artifactId>
