--- a/drools-container/drools-spring/pom.xml
+++ b/drools-container/drools-spring/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.drools</groupId>
     <artifactId>drools-container</artifactId>
-    <version>5.3.0.BRMS-ER9</version>
+    <version>5.3.0.BRMS</version>
   </parent>
 
   <artifactId>drools-spring</artifactId>
