--- a/drools-grid/drools-grid-impl/pom.xml
+++ b/drools-grid/drools-grid-impl/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.drools</groupId>
     <artifactId>drools-grid</artifactId>
-    <version>5.3.0.BRMS-ER9</version>
+    <version>5.3.0.BRMS</version>
   </parent>
 
   <artifactId>drools-grid-impl</artifactId>
