--- a/droolsjbpm-integration-docs/pom.xml
+++ b/droolsjbpm-integration-docs/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.drools</groupId>
     <artifactId>droolsjbpm-integration</artifactId>
-    <version>5.3.0.BRMS-ER9</version>
+    <version>5.3.0.BRMS</version>
   </parent>
 
   <artifactId>droolsjbpm-integration-docs</artifactId>
