BZ-1065314 - Unable to retrieve a JSON formatted Task instance via the REST API (cherry picked from commit 217c660ef3e8c2789647fd7d7769a5466f021d3e)

--- a/kie-remote/kie-services-jaxb/pom.xml
+++ b/kie-remote/kie-services-jaxb/pom.xml
@@ -130,6 +130,11 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jbpm</groupId>
+      <artifactId>jbpm-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     
     <!-- reflection -->
     <dependency>
